--- a/SearchExtensibility/FieldValueSearchExtension/package.json
+++ b/SearchExtensibility/FieldValueSearchExtension/package.json
@@ -12,6 +12,7 @@
     "test": "gulp test"
   },
   "dependencies": {
+    "@fluentui/react": "^7.199.1",
     "@microsoft/decorators": "1.15.2",
     "@microsoft/generator-sharepoint": "1.15.2",
     "@microsoft/sp-application-base": "1.15.2",
@@ -19,24 +20,23 @@
     "@microsoft/sp-dialog": "1.15.2",
     "@microsoft/sp-listview-extensibility": "1.15.2",
     "@microsoft/sp-office-ui-fabric-core": "1.15.2",
-    "@fluentui/react": "^7.199.1",
     "@pnp/graph": "^3.16.0",
     "@pnp/logging": "^3.17.0",
-    "@pnp/modern-search-extensibility": "^1.5.0",
+    "@pnp/modern-search-extensibility": "^1.3.15",
     "@pnp/odata": "^2.15.0",
     "@pnp/sp": "^3.16.0",
     "@pnp/spfx-controls-react": "^3.15.0",
-    "office-ui-fabric-react": "^7.199.1",
-    "rv-spfx-controls": "^1.0.0",
-    "tslib": "2.3.1",
     "@webcomponents/custom-elements": "1.4.3",
     "@webcomponents/webcomponentsjs": "2.5.0",
     "axios": "^0.27.2",
     "dateformat": "^5.0.3",
     "handlebars": "4.7.7",
     "lodash": "^4.17.21",
+    "office-ui-fabric-react": "^7.199.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "rv-spfx-controls": "^1.0.0",
+    "tslib": "2.3.1"
   },
   "devDependencies": {
     "@microsoft/eslint-config-spfx": "1.15.2",
@@ -53,8 +53,8 @@
     "@types/react-dom": "16.9.8",
     "@types/webpack-env": "~1.15.2",
     "ajv": "^6.12.5",
+    "eslint-plugin-react-hooks": "4.3.0",
     "gulp": "4.0.2",
-    "typescript": "4.5.5",    
-    "eslint-plugin-react-hooks": "4.3.0"
+    "typescript": "4.5.5"
   }
 }
